Bug 350148. Fix gmail scrolling speed by not creating nsDisplayBorder items for zero-width borders. r+sr=dbaron